일일 기록에서 날짜 조건 추가